Fixed message errors when creating new messages in ticket since it was tricky from adding Prime Vue. Message added from ticket create can now be viewed in the ticket with fixed time. Added name input fields just so that we can see the name. Added an edit and delete button, delete working, but edit seems to be broken. It works normal but broken in prime vue which is fixing progressing.

--- a/src/frontend/src/assets/main.css
+++ b/src/frontend/src/assets/main.css
@@ -20,3 +20,12 @@
 
     cursor: pointer;
 }
+
+.error {
+    color: red;
+}
+
+#submit-btn:disabled {
+    background-color: gray;
+    cursor: default;
+}
